--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -7,11 +7,43 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+
+    <style>
+        .Logo-container {
+            background-color: #47bcff;
+            color: white;
+        }
+
+        .Logo {
+            font-family: "Handlee", "cursive";
+            font-size: 2.5rem;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="Logo-container mb-3 p-3 d-flex justify-content-between mb-3">
+        <span class="Logo">Mudi</span>
+        <span class="mt-3">Login</span>
+    </div>
+
+
     <div class="container">
-        <div class="card" th:each="pedido : ${pedidos}">
+        <div class="bg-light p-5">
+            <h1 class="display-4">Meus Pedidos</h1>
+        </div>
+        <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between">
+            <div class="navbar-nav">
+                <a class="nav-link nav-link active" href="">Todos</a>
+                <a class="nav-link nav-link" href="">Aguardando</a>
+                <a class="nav-link nav-link" href="">Aprovado</a>
+                <a class="nav-link nav-link" href="">Entregue</a>
+            </div>
+            <a href="/pedido/formulario"><button class="btn btn-secondary">Novo</button></a>
+        </nav>
+        <div class="card mt-3" th:each="pedido : ${pedidos}">
             <div class="card-header" th:text="${pedido.nomeProduto}">Nome do Produto</div>
 
 
@@ -20,7 +52,8 @@
                     <div class="col-12 col-sm-8 mb-3">
                         <div class="row">
                             <div class="col-md-5">Valor: <span th:text="${pedido.valorNegociado}">200,99</span></div>
-                            <div class="col-md-7">Data da entrega: <span th:text="${pedido.dataDaEntrega}">10/02/2021</span></div>
+                            <div class="col-md-7">Data da entrega: <span
+                                    th:text="${pedido.dataDaEntrega}">10/02/2021</span></div>
                         </div>
 
                         <div>Prduto:</div>
