--- a/mudi/src/main/resources/templates/home.html
+++ b/mudi/src/main/resources/templates/home.html
@@ -1,33 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
-
-    <style>
-        .Logo-container {
-            background-color: #47bcff;
-            color: white;
-        }
-
-        .Logo {
-            font-family: "Handlee", "cursive";
-            font-size: 2.5rem;
-        }
-    </style>
-</head>
+<head th:replace="~{base :: head}"></head>
 
 <body>
-    <div class="Logo-container mb-3 p-3 d-flex justify-content-between mb-3">
-        <span class="Logo">Mudi</span>
-        <span class="mt-3">Login</span>
-    </div>
+
+    <div th:replace="~{base :: Logo}"></div>
 
 
     <div class="container">
@@ -36,24 +14,30 @@
         </div>
         <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between">
             <div class="navbar-nav">
-                <a class="nav-link nav-link active" href="">Todos</a>
-                <a class="nav-link nav-link" href="">Aguardando</a>
-                <a class="nav-link nav-link" href="">Aprovado</a>
-                <a class="nav-link nav-link" href="">Entregue</a>
+                <a th:classappend="${status} == null ? 'active'" class="nav-link nav-link" href="/home">Todos</a>
+                <a th:classappend="${status} == 'aguardando' ? 'active'" class="nav-link nav-link" href="/home/aguardando">Aguardando</a>
+                <a th:classappend="${status} == 'aprovado' ? 'active'" class="nav-link nav-link" href="/home/aprovado">Aprovado</a>
+                <a th:classappend="${status} == 'entregue' ? 'active'" class="nav-link nav-link" href="/home/entregue">Entregue</a>
             </div>
             <a href="/pedido/formulario"><button class="btn btn-secondary">Novo</button></a>
         </nav>
         <div class="card mt-3" th:each="pedido : ${pedidos}">
-            <div class="card-header" th:text="${pedido.nomeProduto}">Nome do Produto</div>
-
+            <th:block th:switch="${pedido.status.name()}">
+                <div th:case="'AGUARDANDO'" class="card-header alert-warning" th:text="${pedido.nomeProduto}">Nome do
+                    Produto</div>
+                <div th:case="'APROVADO'" class="card-header alert-success" th:text="${pedido.nomeProduto}">Nome do
+                    Produto</div>
+                <div th:case="'ENTREGUE'" class="card-header alert-dark" th:text="${pedido.nomeProduto}">Nome do Produto
+                </div>
+            </th:block>
 
             <div class="card-body">
                 <div class="row">
                     <div class="col-12 col-sm-8 mb-3">
                         <div class="row">
-                            <div class="col-md-5">Valor: <span th:text="${pedido.valorNegociado}">200,99</span></div>
+                            <div class="col-md-5">Valor: <span th:text="${#numbers.formatCurrency(pedido.valorNegociado)}">200,99</span></div>
                             <div class="col-md-7">Data da entrega: <span
-                                    th:text="${pedido.dataDaEntrega}">10/02/2021</span></div>
+                                    th:text="${#temporals.format(pedido.dataDaEntrega, 'dd/MM/YYYY')}">10/02/2021</span></div>
                         </div>
 
                         <div>Prduto:</div>
