--- a/mudi/src/main/resources/templates/pedido/formulario.html
+++ b/mudi/src/main/resources/templates/pedido/formulario.html
@@ -1,35 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novo Pedido</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
-
-    <style>
-        .Logo-container {
-            background-color: #47bcff;
-            color: white;
-        }
-
-        .Logo {
-            font-family: "Handlee", "cursive";
-            font-size: 2.5rem;
-        }
-    </style>
-
-</head>
+<head th:replace="~{base :: head}"></head>
 
 <body>
 
-    <div class="Logo-container mb-3 p-3 d-flex justify-content-between mb-3">
-        <span class="Logo">Mudi</span>
-        <span class="mt-3">Login</span>
-    </div>
+    <div th:replace="~{base :: Logo}"></div>
 
     <div class="container">
         <div class="bg-light p-5">
